--- a/popup.html
+++ b/popup.html
@@ -45,7 +45,7 @@
 	<link rel="stylesheet" href="styles/post.css" type="text/css" />
 </head>
 <body>
-	
+	<h2>Hello World</h2>
 	<div id="popup">
 		
 	</div>
